--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -11,12 +11,12 @@ jobs:
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Setup Maven Action
+        uses: s4u/setup-maven-action@v1.4.0
         with:
-          java-version: '11'
+          java-version: '19'
           distribution: 'temurin'
-          cache: maven
+          maven-version: '3.8.5'
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: List files in the repository
