--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -11,6 +11,17 @@ jobs:
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: Docker Meta
+        uses: docker/metadata-action@v4
+        id: metadata
+        with:
+          images: bjrooney/simple-java-maven
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: bjrooney
+          password: dckr_pat_Z1UeAEZYdeBGkgVywwlAbUBXGGU
       - name: Setup Maven Action
         uses: s4u/setup-maven-action@v1.4.0
         with:
