--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Maven Action
         uses: s4u/setup-maven-action@v1.4.0
         with:
-          java-version: '19'
+          java-version: '18.0.2+9'
           distribution: 'temurin'
           maven-version: '3.8.5'
       - name: Build with Maven
