--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -25,9 +25,8 @@ jobs:
       - name: Setup Maven Action
         uses: s4u/setup-maven-action@v1.4.0
         with:
-          java-version: '18.0.2+9'
-          distribution: 'temurin'
-          maven-version: '3.8.5'
+          java-version: '8'
+          maven-version: '3.8.2'
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: List files in the repository
