--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -11,17 +11,17 @@ jobs:
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Docker Meta
-        uses: docker/metadata-action@v4
-        id: metadata
-        with:
-          images: bjrooney/simple-java-maven
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: bjrooney
-          password: dckr_pat_Z1UeAEZYdeBGkgVywwlAbUBXGGU
+      # - name: Docker Meta
+      #   uses: docker/metadata-action@v4
+      #   id: metadata
+      #   with:
+      #     images: bjrooney/simple-java-maven
+      # -
+      #   name: Login to DockerHub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: bjrooney
+      #     password: dckr_pat_Z1UeAEZYdeBGkgVywwlAbUBXGGU
       - name: Setup Maven Action
         uses: s4u/setup-maven-action@v1.4.0
         with:
@@ -29,6 +29,13 @@ jobs:
           maven-version: '3.8.2'
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      - name: Kaniko build
+        uses: aevea/action-kaniko@master
+        with:
+          image: bjrooney/simple-java-maven
+          username: bjrooney
+          password: dckr_pat_Z1UeAEZYdeBGkgVywwlAbUBXGGU
+          cache: true
       - name: List files in the repository
         run: |
           ls -lR ${{ github.workspace }}
