--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,20 +4,18 @@ jobs:
   security:
     runs-on: ubuntu-latest
     steps:
-      
-      - name: Setup Maven Action
-        uses: s4u/setup-maven-action@v1.4.0
-        with:
-          java-version: '8'
-          maven-version: '3.8.2'
       - uses: actions/checkout@master
-
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
+        uses: snyk/actions/maven@master
+        continue-on-error: true # To make sure that SARIF upload gets called
         env:
-          SNYK_TOKEN: 9e9a8f5f-d452-4d56-9f7e-703becf8c205
+          SNYK_TOKEN: 31d0da87-1452-4100-9d41-22553ade4798
         with:
-          command: monitor
+          args: --sarif-file-output=snyk.sarif
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk.sarif
   Explore-GitHub-Actions:
     runs-on: self-hosted 
     steps:
@@ -46,6 +44,11 @@ jobs:
           maven-version: '3.8.2'
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        run: snyk test
+        env:
+          SNYK_TOKEN: 9e9a8f5f-d452-4d56-9f7e-703becf8c205
       - name: Kaniko build
         uses: aevea/action-kaniko@master
         with:
