--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,5 +1,5 @@
 name: Example workflow for Maven using Snyk
-on: push
+on: [push]
 jobs:
   security:
     runs-on: ubuntu-latest
@@ -9,7 +9,7 @@ jobs:
         uses: snyk/actions/maven@master
         continue-on-error: true # To make sure that SARIF upload gets called
         env:
-          SNYK_TOKEN: 31d0da87-1452-4100-9d41-22553ade4798
+          SNYK_TOKEN: 9e9a8f5f-d452-4d56-9f7e-703becf8c205
         with:
           args: --sarif-file-output=snyk.sarif
       - name: Upload result to GitHub Code Scanning
