--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -29,6 +29,7 @@ jobs:
           maven-version: '3.8.2'
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      # - run: docker build . -t contoso.azurecr.io/k8sdemo:${{ github.sha }}
       - name: Kaniko build
         uses: aevea/action-kaniko@master
         with:
@@ -40,7 +41,7 @@ jobs:
       - name: Container Scan
         uses: azure/container-scan@v0
         with:
-          image-name: bjrooney/simple-java-maven
+          image-name: bjrooney/simple-java-maven:9-b130-jdk
           username: bjrooney
           password: dckr_pat_Z1UeAEZYdeBGkgVywwlAbUBXGGU
       - name: List files in the repository
