--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -40,13 +40,13 @@ jobs:
           username: bjrooney
           password: dckr_pat_Z1UeAEZYdeBGkgVywwlAbUBXGGU
           cache: true
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/maven-3-jdk-11@master
-        continue-on-error: true # To make sure that SARIF upload gets called
+      - name: Run Snyk to check Docker images for vulnerabilities
+        uses: snyk/actions/docker@master
         env:
           SNYK_TOKEN: 9e9a8f5f-d452-4d56-9f7e-703becf8c205
         with:
-          args: --severity-threshold=low
+          image: bjrooney/simple-java-maven:11.0.16-slim-buster
+          args: --severity-threshold=high
       - name: List files in the repository
         run: |
           ls -lR ${{ github.workspace }}
