--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -32,6 +32,7 @@ jobs:
       - 
         name: Docker build
         run:  docker build . -t bjrooney/simple-java-maven:11.0.16-slim-buster
+
       - name: Run Snyk to check Docker images for vulnerabilities
         continue-on-error: true
         uses: snyk/actions/docker@master
@@ -39,11 +40,14 @@ jobs:
           SNYK_TOKEN: 9e9a8f5f-d452-4d56-9f7e-703becf8c205
         with:
           image: bjrooney/simple-java-maven:11.0.16-slim-buster
-          args: --sarif-file-output=snyk.sarif
+          sarif: true
+          args: --severity-threshold=high
+
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: snyk.sarif
+
       - name: Kaniko build
         uses: aevea/action-kaniko@master
         with:
