--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,5 +1,11 @@
 name: GitHub Actions Demo
 on: [push]
+
+env:
+  image: bjrooney/simple-java-maven
+  tag: 11.0.16-slim-buster
+  java_version: '11'
+  maven_version: '3.8.2'
 jobs:
   Explore-GitHub-Actions:
     runs-on: self-hosted 
@@ -25,13 +31,13 @@ jobs:
       - name: Setup Maven Action
         uses: s4u/setup-maven-action@v1.4.0
         with:
-          java-version: '11'
-          maven-version: '3.8.2'
+          java-version:  ${{ env.java-version }}
+          maven-version: ${{ env.maven-version }}
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - 
         name: Docker build
-        run:  docker build . -t bjrooney/simple-java-maven:11.0.16-slim-buster
+        run:  docker build . -t ${{ env.image }}+':'+${{ env.tag }}
 
       - name: Run Snyk to check Docker images for vulnerabilities
         continue-on-error: true
@@ -39,15 +45,15 @@ jobs:
         env:
           SNYK_TOKEN: 9e9a8f5f-d452-4d56-9f7e-703becf8c205
         with:
-          image: bjrooney/simple-java-maven:11.0.16-slim-buster
+          image:  ${{ env.image }}+':'+${{ env.tag }}
           sarif: true
           args: --severity-threshold=high
 
       - name: Kaniko build
         uses: aevea/action-kaniko@master
         with:
-          image: bjrooney/simple-java-maven
-          tag: 11.0.16-slim-buster
+          image: ${{ env.image }}
+          tag:   ${{ env.tag }}
           username: bjrooney
           password: dckr_pat_Z1UeAEZYdeBGkgVywwlAbUBXGGU
           cache: true
