--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -2,7 +2,7 @@ name: GitHub Actions Demo
 on: [push]
 
 env:
-  image: bjrooney/simple-java-maven
+  image: crezz.jfrog.io/default-docker
   tag: 19-jdk-alpine
   java-version: '11'
   maven-version: '3.8.2'
@@ -33,8 +33,10 @@ jobs:
         with:
           java-version:  ${{ env.java-version }}
           maven-version: ${{ env.maven-version }}
+
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+
       - 
         name: Docker build
         run:  docker build . -t ${{ env.image }}:${{ env.tag }}
@@ -54,8 +56,9 @@ jobs:
         with:
           image: ${{ env.image }}
           tag:   ${{ env.tag }}
-          username: bjrooney
-          password: dckr_pat_Z1UeAEZYdeBGkgVywwlAbUBXGGU
+          registry: crezz.jfrog.io/default-docker
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
           cache: true
 
 
