--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -58,7 +58,7 @@ jobs:
           tag:   ${{ env.tag }}
           registry: crezz.jfrog.io/default-docker
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_SECRET }}
           cache: true
 
 
