--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -2,7 +2,7 @@ name: GitHub Actions Demo
 on: [push]
 
 env:
-  image: crezz.jfrog.io/default-docker
+  image: simple-java-maven
   tag: 19-jdk-alpine
   java-version: '11'
   maven-version: '3.8.2'
