--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -6,6 +6,8 @@ env:
   tag: 19-jdk-alpine
   java-version: '11'
   maven-version: '3.8.2'
+  docker-registry: crezz.jfrog.io/default-docker
+  
 jobs:
   Explore-GitHub-Actions:
     runs-on: self-hosted 
@@ -56,7 +58,7 @@ jobs:
         with:
           image: ${{ env.image }}
           tag:   ${{ env.tag }}
-          registry: crezz.jfrog.io/default-docker
+          registry: $${{ env.docker-registry }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_SECRET }}
           cache: true
