--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           image: ${{ env.image }}
           tag:   ${{ env.tag }}
-          registry: $${{ env.docker-registry }}
+          registry: ${{ env.docker-registry }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_SECRET }}
           cache: true
