--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -74,7 +74,22 @@ jobs:
         id: install
 
       - run: helm version 
-      
+
+      - name: 'Deploy'
+        uses: 'deliverybot/helm@v1'
+        with:
+          release: 'nginx'
+          namespace: 'default'
+          chart: 'app'
+          token: '${{ github.token }}'
+          values: |
+            name: foobar
+          value-files: >-
+          [
+            "values.yaml", 
+            "values.production.yaml"
+          ]
+
       - 
         name: List files in the repository
         run: |
