--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -6,6 +6,7 @@ env:
   tag: 19-jdk-alpine
   java-version: '11'
   maven-version: '3.8.2'
+  distribution: 'microsoft'
   
 jobs:
   Explore-GitHub-Actions:
@@ -28,22 +29,35 @@ jobs:
         name: Login to Artifactory
         uses: docker/login-action@v2
         with:
-          registry: ${{ secrets.ARTIFACTORY_DOCKER_REPO }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_SECRET }}
-
+          registry: ${{ secrets.ARTIFACTORY_DOCKER_REPO }}
       - 
         name: Setup Maven Action - 
         uses: s4u/setup-maven-action@v1.4.0
         with:
           java-version:  ${{ env.java-version }}
           maven-version: ${{ env.maven-version }}
+          distribution:  ${{ env.distribution}}
 
       - 
         name: Build with Maven
         run: mvn -B package --file pom.xml
 
+      - 
+        name: Docker build locally for Snyk Scan
+        run:  docker build . -t ${{ env.image }}:${{ env.tag }}
 
+      - 
+        name: Run Snyk to check Docker images for vulnerabilities
+        continue-on-error: true
+        uses: snyk/actions/docker@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SYNK_TOKEN}}
+        with:
+          image:  ${{ env.image }}:${{ env.tag }}
+          sarif: true
+          args: --severity-threshold=high
 
       - 
         name: Kaniko build to Artifactory
@@ -63,7 +77,6 @@ jobs:
 
       - run: helm version 
       - run: helm repo add default-helm ${{secrets.ARTIFACTORY_HELM }} --username brendan.rooney@gmail.com --password AKCp8mZn7j64vszaRjtqqG1mzdAg6UeAWQDUh8dxSUNJs8k9twyGj8uCvrWZyMbFPjrDcmV62
-
 
       - 
         name: List files in the repository
