--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,7 +3,7 @@ on: [push]
 
 env:
   image: simple-java-maven
-  tag: msopenjdk-11=11.0.11+9-1
+  tag: msopenjdk-11.0.11+9-1
   java-version: '11'
   maven-version: '3.8.2'
   distribution: 'microsoft'
@@ -43,7 +43,7 @@ jobs:
       - 
         name: Docker build locally for Snyk Scan
         run:  docker build . -t ${{ env.image }}:${{ env.tag }}
-        
+
       - name: Docker Meta
         uses: docker/metadata-action@v4
         id: metadata
