--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -9,6 +9,19 @@ env:
   distribution: 'microsoft'
   
 jobs:
+  Maven-Snyk:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run Snyk to check for vulnerabilities
+        uses: actions/checkout@v3
+      -
+        uses: snyk/actions/maven-3-jdk-11@master
+        continue-on-error: true # 
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN}}
+        with:
+          args: --severity-threshold=low
+
   Explore-GitHub-Actions:
     runs-on: self-hosted 
     steps:
