--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -9,10 +9,11 @@ env:
   distribution: 'microsoft'
   
 jobs:
-  Maven-Snyk:
+  Snyk:
     runs-on: ubuntu-latest
     steps:
-      - name: Run Snyk to check for vulnerabilities
+      - 
+        name: Run Snyk to check for vulnerabilities
         uses: actions/checkout@v3
       -
         uses: snyk/actions/maven-3-jdk-11@master
@@ -21,7 +22,31 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN}}
         with:
           args: --severity-threshold=low
+      - 
+        name: Docker build locally for Snyk Scan
+        run:  docker build . -t ${{ env.image }}:${{ env.tag }}
 
+      - 
+        name: Docker Meta
+        uses: docker/metadata-action@v4
+        id: metadata
+        with:
+          images: ${{ env.image }}:${{ env.tag }}
+      - 
+        name: Run Snyk to check Docker images for vulnerabilities
+        continue-on-error: true
+        uses: snyk/actions/docker@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SYNK_TOKEN}}
+        with:
+          image:  ${{ env.image }}:${{ env.tag }}
+          args: --file=Dockerfile
+      - 
+        name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk.sarif
+          
   Explore-GitHub-Actions:
     runs-on: self-hosted 
     steps:
@@ -52,27 +77,6 @@ jobs:
       - 
         name: Build with Maven
         run: mvn -B package --file pom.xml
-
-      - 
-        name: Docker build locally for Snyk Scan
-        run:  docker build . -t ${{ env.image }}:${{ env.tag }}
-
-      - name: Docker Meta
-        uses: docker/metadata-action@v4
-        id: metadata
-        with:
-          images: ${{ env.image }}:${{ env.tag }}
-      - 
-        name: Run Snyk to check Docker images for vulnerabilities
-        continue-on-error: true
-        uses: snyk/actions/docker@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SYNK_TOKEN}}
-        with:
-          image:  ${{ env.image }}:${{ env.tag }}
-          sarif: true
-          args: --severity-threshold=high
-
       - 
         name: Kaniko build to Artifactory
         uses: aevea/action-kaniko@master
