--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -19,7 +19,7 @@ jobs:
         uses: snyk/actions/maven-3-jdk-11@master
         continue-on-error: true # 
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN}}
+          SNYK_TOKEN: 9e9a8f5f-d452-4d56-9f7e-703becf8c205
         with:
           args: --severity-threshold=low
       - 
@@ -46,7 +46,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: snyk.sarif
-          
+
   Explore-GitHub-Actions:
     runs-on: self-hosted 
     steps:
