--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -19,7 +19,7 @@ jobs:
         uses: snyk/actions/maven-3-jdk-11@master
         continue-on-error: true # 
         env:
-          SNYK_TOKEN: ${{ secrets.SYNK_TOKEN}}
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN}}
         with:
           args: --severity-threshold=low
       - 
@@ -35,8 +35,8 @@ jobs:
         name: Run Snyk to check Docker images for vulnerabilities
         continue-on-error: true
         uses: snyk/actions/docker@master
-        # env:
-        #   SNYK_TOKEN: ${{ secrets.SYNK_TOKEN}}
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN}}
         with:
           image:  ${{ env.image }}:${{ env.tag }}
           args: --file=Dockerfile
