--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,7 +3,7 @@ on: [push]
 
 env:
   image: simple-java-maven
-  tag: 3-jdk-11
+  tag: 3.8.6-eclipse-temurin-11-focal
   java-version: '11'
   maven-version: '3.8.6'
   distribution: 'temurin'
