--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,7 +3,7 @@ on: [push]
 
 env:
   image: simple-java-maven
-  tag: eclipse-temurin-11-jre-focal
+  tag: openjdk-19-jdk-alpine3.15
   java-version: '11'
   maven-version: '3.8.6'
   distribution: 'temurin'
