--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -88,7 +88,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }} # only needed if version is 'latest'
         id: install
       - run: helm version 
-      - run: helm repo add default-helm ${{secrets.ARTIFACTORY_HELM }} --username brendan.rooney@gmail.com --password AKCp8mZn7j64vszaRjtqqG1mzdAg6UeAWQDUh8dxSUNJs8k9twyGj8uCvrWZyMbFPjrDcmV62
+      - run: helm repo add default-helm ${{secrets.ARTIFACTORY_HELM }} --username ${{ secrets.DOCKER_USERNAME }}--password ${{ secrets.DOCKER_SECRET}}
 
       - 
         name: List files in the repository
