--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -89,7 +89,16 @@ jobs:
         id: install
       - run: helm version 
       - run: helm repo add default-helm ${{secrets.ARTIFACTORY_HELM }}  --username ${{ secrets.HELM_USERNAME }} --password ${{ secrets.HELM_SECRET}}
-
+      - 
+        name: 
+        uses: goodsmileduck/helm-push-action@v3
+        env:
+          SOURCE_DIR: '.'
+          CHART_FOLDER: 'simple-java-maven-app'
+          FORCE: 'True'
+          CHARTMUSEUM_URL: ${{secrets.ARTIFACTORY_HELM }}
+          CHARTMUSEUM_USER: ${{ secrets.HELM_USERNAME }}
+          CHARTMUSEUM_PASSWORD: ${{ secrets.HELM_SECRET}}
       - 
         name: List files in the repository
         run: |
