--- a/example-helm-chart/values.yaml
+++ b/example-helm-chart/values.yaml
@@ -1,4 +1,4 @@
-# Default values for simple-java-maven-app.
+# Default values for example-helm-chart.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
