--- a/example-helm-chart/templates/hpa.yaml
+++ b/example-helm-chart/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "simple-java-maven-app.fullname" . }}
+  name: {{ include "example-helm-chart.fullname" . }}
   labels:
-    {{- include "simple-java-maven-app.labels" . | nindent 4 }}
+    {{- include "example-helm-chart.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "simple-java-maven-app.fullname" . }}
+    name: {{ include "example-helm-chart.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
