--- a/example-helm-chart/templates/service.yaml
+++ b/example-helm-chart/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "simple-java-maven-app.fullname" . }}
+  name: {{ include "example-helm-chart.fullname" . }}
   labels:
-    {{- include "simple-java-maven-app.labels" . | nindent 4 }}
+    {{- include "example-helm-chart.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "simple-java-maven-app.selectorLabels" . | nindent 4 }}
+    {{- include "example-helm-chart.selectorLabels" . | nindent 4 }}
