--- a/example-helm-chart/templates/serviceaccount.yaml
+++ b/example-helm-chart/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "simple-java-maven-app.serviceAccountName" . }}
+  name: {{ include "example-helm-chart.serviceAccountName" . }}
   labels:
-    {{- include "simple-java-maven-app.labels" . | nindent 4 }}
+    {{- include "example-helm-chart.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
