--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -111,9 +111,8 @@ jobs:
 
     - name: Helm Artifactory Publisher
       uses: mbovo/action-helm-artifactory@v1.0.0
-
       with:
-        action: "push"
+        action: lint
       env:
         CHART_DIR: example-helm-chart
         ARTIFACTORY_URL:      ${{secrets.ARTIFACTORY_HELM }}/default-helm/example-helm-chart
