mbovo/action-helm-artifactory@v1.0.0

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -109,7 +109,7 @@ jobs:
     # - name: myOtherJob1
     #   run:
 
-    - name: Helm Artifactory Publisher
+    - name: Helm Artifactory Lint
       uses: mbovo/action-helm-artifactory@v1.0.0
       with:
         action: lint
@@ -118,3 +118,4 @@ jobs:
         ARTIFACTORY_URL:      ${{secrets.ARTIFACTORY_HELM }}/default-helm/example-helm-chart
         ARTIFACTORY_USERNAME: ${{ secrets.HELM_USERNAME }}
         ARTIFACTORY_PASSWORD: ${{ secrets.HELM_SECRET }}
+        ACTION: lint
