--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -107,7 +107,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Helm Artifactory check
-      uses: mbovo/action-helm-tools@main
+      uses: mbovo/action-helm-artifactory@main
       with:
         action: check
       env:
