--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -105,7 +105,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-
     - name: Helm Artifactory check
       uses: mbovo/action-helm-artifactory@main
       with:
@@ -123,7 +122,7 @@ jobs:
         action: push
       env:
         CHART_DIR: example-helm-chart
-        ARTIFACTORY_URL:      ${{secrets.ARTIFACTORY_HELM }}/artifactory/helm-local/
+        ARTIFACTORY_URL:      https://crezz.jfrog.io/artifactory/default-helm-local
         ARTIFACTORY_USERNAME: ${{ secrets.HELM_USERNAME }}
         ARTIFACTORY_PASSWORD: ${{ secrets.HELM_SECRET }}
         ACTION: push
