Test action in same repo

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -70,7 +70,7 @@ jobs:
           args: --file=Dockerfile
       - 
         name: Kaniko build to Artifactory
-        uses: aevea/action-kaniko@master
+        uses: ./.github/actions/kaniko
         with:
           image: ${{ env.image }}
           tag:   ${{ env.tag }}
